fix scrolling on mobile

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -3147,7 +3147,7 @@ p.last.small.card {
 
 	.hero .hero-logo.card-logo {
 		position: absolute;
-		top: 1rem;
+		top: 0.75rem;
 		left: 0.25rem;
 	}
 
